# Tectonic-Engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  License  README.md  Tectonic Engine.sln  binds.c  binds.h  checksum.c  checksum.h  checksumpatcher.cpp  cmakegen.bat  cmakegen.sh  cmakegen_x64.bat  cmakegen_x64.sh  cmakegen_x86.bat  commands.c  commands.h  compat.h  credits.md  credits.txt  cvar.c  cvar.h  discord_wrapper.cpp  discord_wrapper.h  dsp_reverb.c  dsp_reverb.cpp  dsp_reverb.h  editor.c  editor.h  editor_undo.c  editor_undo.h  gameconfig.c  gameconfig.h  gl_console.cpp  gl_console.h  gl_misc.c  gl_misc.h  imgui.ini  io_system.c  (+32 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
Batchmodelimporter/: Batchmodelimporter.vcxproj  main.cpp
Batchmodelimporter/x64/Release/: Batchmodelimporter.exe.recipe  Batchmodelimporter.iobj  Batchmodelimporter.ipdb
Batchmodelimporter/x64/Release/Batchmod.5d6d6e66.tlog/: Batchmodelimporter.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SDL2_ttf-2.24.0/: CHANGES.txt  README.txt
SSAudio-interface/: SSAudio-interface.vcxproj  SSAudio-interface.vcxproj.filters  baseplay.cpp  baseplay.h  interface.cpp
SSAudio-interface/x64/Release/SSAudio .333b544c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Tectonic Engine/x64/Debug/: vc143.idb
Tectonic Engine/x64/Debug/Tectonic Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tectonic Engine.lastbuildstate
Tectonic Engine/x64/Release/: Tectonic Engine.exe.recipe  Tectonic Engine.ipdb
Tectonic Engine/x64/Release/Tectonic Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Tectonic Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Tools/AmbientCubeInspector/: main.cpp
Tools/ModelImporter/: main.cpp
Tools/ParticleEditor/: main.cpp
Tools/SDKLauncher/: main.cpp
Tools/TConsole/: main.cpp
Tools/VertexLighter/: main.cpp
docs/: audio.md  commands.md  configuration.md  editor.md  engine.md  entity.md  features.md  introduction.md  materials.md  models.md  particle.md  physics.md  water.md  weapons.md
engine/: beams.c  beams.h  binds.h  cables.c  cables.h  checksum.c  checksum.cpp  checksum.h  checksumpatcher.cpp  commands.h  compat.h  cvar.h  decals.c  decals.h  discord_wrapper.c  discord_wrapper.cpp  discord_wrapper.h  dsp_reverb.c  editor.c  editor.h  editor_undo.c  editor_undo.h  engine.c  engine.h  engine_api.h  engine_commands.c  engine_commands.h  game_data.c  game_data.h  gameconfig.c  gl_beams.c  gl_beams.h  gl_blackholes.c  gl_blackholes.h  gl_bloom.c  gl_bloom.h  gl_cables.h  gl_decals.c  gl_decals.h  gl_geometry.c  (+61 more)
engine/ipc_lib/: ipc_api.h  ipc_system.c  ipc_system.h
engine/level0/: binds.h  commands.c  commands.h  cvar.c  cvar.h  gameconfig.h  gl_console.cpp  gl_console.h  level0_api.h
engine/level1/: binds.c  binds.h  gameconfig.c  gameconfig.h  level1_api.h  network.c  network.h
engine/materials/: materials_api.h  texturemanager.c  texturemanager.h  water_manager.c  water_manager.h
engine/math_lib/: math_api.h  math_lib.c  math_lib.h
engine/models/: model_loader.c  model_loader.h  models_api.h
engine/physics/: physics_api.h  physics_wrapper.cpp  physics_wrapper.h
engine/sound/: dsp_reverb.c  dsp_reverb.h  sound_api.h  sound_system.c  sound_system.h
game_dll/: io_system.h  video_player.c  video_player.h
imgui-master/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
launcher/: launcher.c  launcher.cpp
launcher/resources/: launcher.aps  launcher.manifest  launcher.rc
minivorbis/: minivorbis.h
pl_mpeg/: pl_mpeg.h
x64/: level1.map
x64/Release/: SSAudio (Interface Wrapper).lib  binds.txt  gameconf.txt  imgui.ini  level1.map  materials.def  tectonic.tgd
x64/Release/models/: Barrel_01.gltf
x64/Release/particles/: fire.par
x64/Release/shaders/: beam.frag  beam.vert  blackhole.frag  blackhole.vert  bloom.frag  blur.frag  cable.frag  debug.frag  debug_buffer.frag  depth_aa.frag  depth_point.frag  depth_point.geom  depth_spot.frag  dof.frag  exposure.comp  fxaa.frag  gizmo.frag  glass.frag  glow.frag  glow.geom  glow.vert  grid.frag  histogram.comp  light_culling.comp  main.frag  main.tcs  main.tes  main.vert  menu.frag  menu.vert  menu_ui.frag  menu_ui.vert  motion_blur.frag  overlay.frag  parallax_interior.frag  parallax_interior.vert  particle.frag  particle.geom  particle.vert  postprocess.frag  (+31 more)
